--- a/Application/Home/View/Public/aboutus.html
+++ b/Application/Home/View/Public/aboutus.html
@@ -35,7 +35,7 @@
                     </div>
                 </div>
                 <div class=" line2"></div>
-            	<img class="mainimage" src="__PUBLIC__/images/江苏科技大学苏州理工学院.JPG">
+            	<img class="mainimage" src="__PUBLIC__/images/just.jpg">
                 <p class="maintext">&nbsp;&nbsp;&nbsp;&nbsp;在一座金碧辉煌的宫殿里，有一位俊郎的少年坐在那宫殿的最高处。他那一双深黑色的双眼晶莹透彻,仿佛在他面前没有一丝秘密可言。
     在他身旁有一美貌女子，满头乌黑的秀发，闭月羞花的面孔以及那婀娜多姿的身材,让人感觉是那不染凡尘的仙子一般。
     这时走进来一个人黑衣中年男子，那中年男子走到少年面前道：“禀告圣君”天界来使，不知圣君见是不见。”原来这位少年便是末日圣君！</p>
