--- a/Application/Home/View/Public/login.html
+++ b/Application/Home/View/Public/login.html
@@ -114,7 +114,7 @@
                         <td><input name="username" type="text" /></td>
                     </tr>
                     <tr>
-                        <td><span>密&nbsp;&nbsp;&nbsp;码：</span></td>
+                        <td><span>密&nbsp;码：</span></td>
                         <td><input name="password" type="password" /></td>
                     </tr>
                 </table>
