--- a/Application/Home/View/Signup/signup_person.html
+++ b/Application/Home/View/Signup/signup_person.html
@@ -54,7 +54,7 @@
                     var un = $('#username').val();
                     $.ajax({
                         type:"post",
-                        url:"__ROOT__/index.php/Signup/checkName",
+                        url:"__ROOT__/index.php/Public/checkName",
                         dataType:'json',
                         data:{username:un}
                         })
