--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -16,7 +16,7 @@
             overflow: hidden;
         }
         #banner-container{
-            width: 9600px;
+            width: 5760px;
             position: absolute;
             left: 0;
             top: 0;
@@ -28,10 +28,13 @@
         #banner-container ul li{
             float: left;
             max-width:1920px;
+            /*width: 100%;*/
+            min-width: 1100px;
             height: 400px;
         }
         #banner-container img{
             max-width: 1920px;
+            min-width: 1100px;
             width: 100%;
         }
         .control{
