--- a/Application/Home/View/Public/footer.html
+++ b/Application/Home/View/Public/footer.html
@@ -1,38 +1,37 @@
 <div id="footerbox">
 	<div id="footer">
         <div id="footerlist">
-            <a href="index.html"><h1>网站首页</h1></a>
-            <a href="aboutus.html"><p>♦平台介绍</p></a>
+            <a href="__ROOT__"><h1>网站首页</h1></a>
+            <a href="{:U('Public/aboutus')}"><p>♦平台介绍</p></a>
         </div>
         <div id="footerlist">
-            <a href="news.html"><h1>信息咨询</h1></a>
-            <a href=""><p>♦政策法规</p></a>
-            <a href=""><p>♦招标信息</p></a>
-            <a href=""><p>♦市场动态</p></a>
-            <a href=""><p>♦业内资讯</p></a>
+            <a href="#"><h1>信息咨询</h1></a>
+            <a href="#"><p>♦政策法规</p></a>
+            <a href="#"><p>♦招标信息</p></a>
+            <a href="#"><p>♦市场动态</p></a>
+            <a href="#"><p>♦业内资讯</p></a>
         </div>
         <div id="footerlist">
-            <a href="teams.html"><h1>专家团队</h1></a>
-            <a href=""><p>♦专家信息</p></a>
-             <a href=""><p>♦研发团队</p></a>
+            <a href="{U('Team/teamlist')"><h1>专家团队</h1></a>
+            <a href="{:U('Expert/expertlist')}"><p>♦专家信息</p></a>
         </div>
         <div id="footerlist">
-            <a href="needs.html"><h1>企业需求</h1></a>
+            <a href="{:U('Demand/demand')}"><h1>企业需求</h1></a>
         </div> 
         <div id="footerlist">
-            <a href="case.html"><h1>科技成果</h1></a>
+            <a href="{:U('Result/result')}"><h1>科技成果</h1></a>
         </div> 
         <div id="footerlist">
-            <a href="agentstrategy.html"><h1>教育培训</h1></a>
-            <a href=""><p>♦学历教育</p></a>
-            <a href=""><p>♦职业资格教育</p></a>
-            <a href=""><p>♦技能培训</p></a>
+            <a href="#"><h1>教育培训</h1></a>
+            <a href="#"><p>♦学历教育</p></a>
+            <a href="#"><p>♦职业资格教育</p></a>
+            <a href="#"><p>♦技能培训</p></a>
         </div>
          <div id="footerlist">
-            <a href="service.html"><h1>协同管理</h1></a>
-            <a href=""><p>♦协同高校</p></a>
-            <a href=""><p>♦协同企业</p></a>
-            <a href=""><p>♦行业协会</p></a>
+            <a href="#"><h1>协同管理</h1></a>
+            <a href="#"><p>♦协同高校</p></a>
+            <a href="#"><p>♦协同企业</p></a>
+            <a href="#"><p>♦行业协会</p></a>
         </div> 
         <img src="__PUBLIC__/images/erweima_05.png">
     </div>
@@ -42,26 +41,3 @@
     	<p>copyright 江苏科技大学</p>
     </div>
 </div>
-<script type="text/javascript">
-    $(function(){
-         $(".footerlist a p").mouseenter(
-            function(){
-                $(this).css("color","#999")
-            }
-        ).mouseleave(
-            function(){
-                $(this).css("color","#666")
-            }
-        )
-        $(".footerlist a h1").mouseenter(
-            function(){
-                $(this).css("color","#999")
-            }
-        ).mouseleave(
-            function(){
-                $(this).css("color","#666")
-            }
-        )
-    });
-     
-</script>
