--- a/Application/Home/View/Result/resultlist.html
+++ b/Application/Home/View/Result/resultlist.html
@@ -1,12 +1,40 @@
 <!doctype html>
 <html>
 <head>
-<script src="__PUBLIC__/js/jquery.min.js"></script>
-<link href="__PUBLIC__/css/css.css" rel="stylesheet" type="text/css">
-<link rel="stylesheet" href="__PUBLIC__/css/nav.css">
-<link href="__PUBLIC__/css/listpage.css" rel="stylesheet" type="text/css">
-
-</style>
+    <script src="__PUBLIC__/js/jquery.min.js"></script>
+    <link href="__PUBLIC__/css/css.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="__PUBLIC__/css/nav.css">
+    <link href="__PUBLIC__/css/listpage.css" rel="stylesheet" type="text/css">
+    <style>
+        button{
+            background: #72CEDD;
+            color: #FAFDFD;
+            font-weight: 700;
+            border: 2px solid #0999B1;
+            border-radius: 5px;
+            padding: 5px 10px;
+            cursor: pointer;
+            margin-top: 10px;
+        }
+        button:hover{
+            background: #0F93A9;
+            color: white;
+        }
+         .info-list:first-child a{
+            color: #0862E5;
+         }
+        .info-list:first-child a:hover{
+            color: #e4393c;
+        }
+        div.add{
+            text-align: center;
+        }
+        div.add img{
+            width: 200px;
+            height: 44px;
+        }
+    </style>
+    
 <meta charset="utf-8">
 <title>张家港工程项目协同创新服务平台</title>
 </head>
@@ -19,9 +47,20 @@
     <div class="infolist-main">
         <div class="leftmain">
             <div class="mainlefttitle"><img src="__PUBLIC__/images/case_03.png"></div>
+            <div class="add"> 
+                <?php if (session('uid')): ?>
+                    <a href="{:U('Result/add')}">
+                        <img src="__PUBLIC__/images/add_research.png" alt="">
+                    </a>          
+                <?php else: ?>
+                    <a href="{:U('Public/login')}">
+                        <img src="__PUBLIC__/images/add_research.png" alt="">
+                    </a>
+                <?php endif ?>                    
+            </div>
             <div class="mainbtn">
                  <div class="navlist active">
-                    <a href="{:U('Team/teamlist')}">科技成果</a>
+                    <a href="{:U('Result/resultlist')}">科技成果</a>
                 </div>
             </div>
         </div>
@@ -29,39 +68,46 @@
         	<div class="top-tip">
             	<div id="page-title">
                     <img src="__PUBLIC__/images/download_09.png">
-                    <h1>最新成果</h1>
+                    最新成果
                 </div>
                 <div id="position">
-                	<img src="__PUBLIC__/images/download_06.png">
-                    <p>您的位置：</p>
+                	<p>&nbsp;>科技成果</p>
                     <a href="__ROOT__">首页</a>
-                    <p>&nbsp;>科技成果</p>
+                    <span>您的位置：</span>
+                    <img src="__PUBLIC__/images/download_06.png">
                 </div>
             </div>
             <div class="info-type">
                 <span style="font-size:16px;">需求类型：</span>
-                <a href="{:U('Result/resultlist')}">全部</a>&nbsp;&nbsp;
-                <a href="{:U('Result/resultlist',array('type' => 1))}">电子信息</a>&nbsp;&nbsp;
-                <a href="{:U('Result/resultlist',array('type' => 2))}">机械设计与制造</a>&nbsp;&nbsp;
-                <a href="{:U('Result/resultlist',array('type' => 3))}">新能源与环保</a>&nbsp;&nbsp;
-                <a href="{:U('Result/resultlist',array('type' => 4))}">生物技术与医药</a>&nbsp;&nbsp;
-                <a href="{:U('Result/resultlist',array('type' => 5))}">新材料</a>&nbsp;&nbsp;
-                <a href="{:U('Result/resultlist',array('type' => 6))}">现代农业</a>&nbsp;&nbsp;
-                <a href="{:U('Result/resultlist',array('type' => 1))}">其他</a>
+                <a href="{:U('Result/resultlist')}">全部</a>&nbsp;
+                <a href="{:U('Result/resultlist',array('type' => 1))}">电子信息</a>&nbsp;
+                <a href="{:U('Result/resultlist',array('type' => 2))}">机械设计与制造</a>&nbsp;
+                <a href="{:U('Result/resultlist',array('type' => 3))}">新能源与环保</a>&nbsp;
+                <a href="{:U('Result/resultlist',array('type' => 4))}">生物技术与医药</a>&nbsp;
+                <a href="{:U('Result/resultlist',array('type' => 5))}">新材料</a>&nbsp;
+                <a href="{:U('Result/resultlist',array('type' => 6))}">现代农业</a>&nbsp;
+                <a href="{:U('Result/resultlist',array('type' => 7))}">其他</a>
             </div>
             <hr />
                <volist id="list" name="list">
                    <div class="info-list <?php if($i % 2 == 0) echo ' grey';?>">
                        <div class="info-title" >
                             <span>
-                                <a href="{:U('Result/result',array('id'=>$list['research_id'],'owner'=>$list['owner_id'],'team'=>$list['isteam']))}" title="{$list.title}">
+                                <a href="{:U('Result/result',array('id'=>$list['result_id']))}" title="{$list.title}">
                                     {$list.research_name}&nbsp;&nbsp;
                                 </a>
                             </span>
                             <span>&nbsp;{$list.publish_time}</span>
-                            <a href="{:U('Public/link')}">
-                                <img id="linkbutton" src="__PUBLIC__/images/linkbutton.jpg">
-                            </a>
+                            <?php if (session('uid')): ?>
+                                <a id="linkbutton" href="{:U('Public/link',array('linkType'=> 4,'id'=>$list['research_id'],'title'=>$list['title']))}" target="_black">
+                                    <button>我要联系</button>
+                                </a>
+                            <?php else: ?>
+                                <a id="linkbutton" href="{:U('Public/login')}" target="_black">
+                                    <button>我要联系</button>
+                                </a>
+                            <?php endif ?>
+                            
                             
                        </div>                           
                    </div>
