--- a/Application/Home/View/Signup/forgetPwd_step1.html
+++ b/Application/Home/View/Signup/forgetPwd_step1.html
@@ -7,7 +7,9 @@
     <style>
         .main{
             width:350px;
+            height: 500px;
             margin:0 auto;
+            margin-top: 30px;            
         }
         .line{
             text-align:center;
@@ -41,7 +43,7 @@
 <body>
 
     <include file="Public/nav"/>
-    <form action="{:U('Signup/do_forgetPwd_step1')}" method="get">
+    <form action="{:U('Signup/do_forgetPwd_step1')}" method="post">
         <div class="main">
             <div class="line">
                 <label for="username">用户名：</label>
