--- a/Application/Home/View/Signup/forgetPwd_step2.html
+++ b/Application/Home/View/Signup/forgetPwd_step2.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="__PUBLIC__/css/nav.css">
-
+    <script src="__PUBLIC__/js.jquery.min.js"></script>
+    
     <title>张家港工程项目协同创新服务平台</title>
     <style>
         .main{
             width:350px;
+            height: 500px;
             margin:0 auto;
+            margin-top: 30px;
         }
         .line{
             text-align:center;
@@ -41,7 +44,7 @@
 </head>
 <body>
     <include file = "Public/nav"/>
-    <form action="{:U('Signup/do_forgetPwd_step2')}" method="get">
+    <form action="{:U('Signup/do_forgetPwd_step2')}" method="post">
         <div class="main">
             <div class="line">
                 <label for="phone">手机号</label>
@@ -54,7 +57,7 @@
             <input type="hidden" name="username" value="{$username}">
             <br>
             <div class="next">
-                <a href="#">返回登录</a>
+                <a href="{:U('Public/login')}">返回登录</a>
                 <input type="submit" value="下一步">
             </div>
         </div>
