--- a/Application/Home/View/Signup/forgetPwd_step3.html
+++ b/Application/Home/View/Signup/forgetPwd_step3.html
@@ -7,7 +7,9 @@
     <style>
         .main{
             width:350px;
+            height: 500px;
             margin:0 auto;
+            margin-top: 30px;
         }
         .line{
             text-align:center;
