--- a/Application/Home/View/Signup/signup_company.html
+++ b/Application/Home/View/Signup/signup_company.html
@@ -49,7 +49,7 @@
             </div>
             <div class="line">
                 <label for="company_type">企业标签</label>
-                <input type="text" class="line-input" id="company_type" name="company_type" maxlength="50" placeholder="例：互联网公司、创业公司、民营企业"><span class="must">20字以内</span>
+                <input type="text" class="line-input" id="company_type" name="company_type" maxlength="50" placeholder="例：互联网公司、创业公司、民营企业"><span class="must">30字以内</span>
             </div>
             <div class="line">
                 <label for="jobtype">所在城市</label>
@@ -65,13 +65,13 @@
             </div>        
             <div class="line">
                 <label for="research" style="float:left;">经营方向</label>
-                 <input type="checkbox" name="research" value="1">电子信息
-                <input type="checkbox" name="research" value="2">机械设计与制造
-                <input type="checkbox" name="research" value="3">新能源与环保<br>
-                <input type="checkbox" name="research" value="4">生物技术与医药
-                <input type="checkbox" name="research" value="5">新材料
-                <input type="checkbox" name="research" value="6">现代农业
-                <input type="checkbox" name="research" value="7">其他 <span id="" class="must">*</span>
+                 <input type="checkbox" name="research[]" value="1">电子信息
+                <input type="checkbox" name="research[]" value="2">机械设计与制造
+                <input type="checkbox" name="research[]" value="3">新能源与环保<br>
+                <input type="checkbox" name="research[]" value="4">生物技术与医药
+                <input type="checkbox" name="research[]" value="5">新材料
+                <input type="checkbox" name="research[]" value="6">现代农业
+                <input type="checkbox" name="research[]" value="7">其他 <span id="" class="must">*</span>
             </div>
             <div class="line">
                 <label for="linkman">联系人</label>
@@ -107,7 +107,7 @@
                     var un = $('#username').val();
                     $.ajax({
                         type:"post",
-                        url:"__ROOT__/index.php/Signup/checkName",
+                        url:"__ROOT__/index.php/Public/checkName",
                         dataType:'json',
                         data:{username:un}
                         })
