--- a/Application/Home/View/Team/teamlist.html
+++ b/Application/Home/View/Team/teamlist.html
@@ -3,11 +3,74 @@
 <head>
     <meta charset="utf-8">
     <script src="__PUBLIC__/js/jquery.min.js"></script>
-    <!-- <link rel="stylesheet" href="__PUBLIC__/css/css.css" type="text/css"> -->
     <link rel="stylesheet" href="__PUBLIC__/css/nav.css" type="text/css">
     <link rel="stylesheet" href="__PUBLIC__/css/listpage.css" type="text/css">
-    
     <title>张家港工程项目协同创新服务平台</title>
+    <style>
+        .info-list{
+            overflow: hidden;
+            margin-bottom: 5px;
+        }
+        .info-list>img{
+            float: left; 
+            max-width:120px;
+            max-height: 160px; 
+        }
+        .team-info{
+            float: left; 
+            margin-top: 10px;
+        }
+        .team-info *{
+            vertical-align: middle;
+        }
+        .team-info h4{
+            margin: 5px;
+        }
+        .control-title-width{
+            display: inline-block;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow:ellipsis;
+        }
+        h4 a{
+            max-width: 465px;
+        }
+        h4 a:hover{
+            color: #e4393c;
+        }
+        .team-info span{
+            max-width: 440px;
+        }
+        p{
+            font-size: 14px;
+            margin: 5px;
+        }
+        .other-info{
+            float: right;
+            margin-top: 10px;
+        }
+         button{
+            background: #72CEDD;
+            color: #FAFDFD;
+            font-weight: 700;
+            border: 2px solid #0999B1;
+            border-radius: 5px;
+            padding: 5px 10px;
+            cursor: pointer;
+            margin-top: 10px;
+        }
+        button:hover{
+            background: #0F93A9;
+            color: white;
+        }
+        div.add{
+            text-align: center;
+        }
+        div.add img{
+            width: 200px;
+            height: 44px;
+        }
+    </style>
 </head>
 
 <body>
@@ -18,7 +81,25 @@
     <div class="infolist-main">
         <div class="leftmain">
             <div class="mainlefttitle"><img src="__PUBLIC__/images/科技团队.png"></div>
-            <div class="mainbtn">
+                <div class="add"> 
+                    <?php if (session('uid')): ?>
+                        <?php if (session('type') == 1): ?>
+                            <a href="{:U('Team/add')}">
+                                <img src="__PUBLIC__/images/add_team.png" alt="">
+                            </a>
+                        <?php else: ?>
+                            <a href="javascript:void(0);" onclick="waring()">
+                                <img src="__PUBLIC__/images/add_team.png" alt="">
+                            </a>                       
+                        <?php endif ?>                    
+                    <?php else: ?>
+                        <a href="{:U('Public/login')}">
+                            <img src="__PUBLIC__/images/add_team.png" alt="">
+                        </a>
+                    <?php endif ?>                    
+                </div>
+                <div class="mainbtn">
+               
                 <div class="navlist active">
                     <a href="{:U('Team/teamlist')}">专家团队</a>
                 </div>
@@ -35,40 +116,67 @@
                     <a href="#">专家团队</a>
                      <span>&nbsp;>&nbsp;</span>
                      <a href="__ROOT__">首页</a>
-                    <p>您的位置：</p>
+                    <span>您的位置：</span>
                     <img src="__PUBLIC__/images/download_06.png">
                 </div>
             </div>
             <div class="info-type">
                 <span style="font-size:16px;">研究领域：</span>
-                <a href="{:U('Team/teamlist')}">全部</a>&nbsp;&nbsp;
-                <a href="{:U('Team/teamlist',array('type' => 1))}">电子信息</a>&nbsp;&nbsp;
-                <a href="{:U('Team/teamlist',array('type' => 2))}">机械设计与制造</a>&nbsp;&nbsp;
-                <a href="{:U('Team/teamlist',array('type' => 3))}">新能源与环保</a>&nbsp;&nbsp;
-                <a href="{:U('Team/teamlist',array('type' => 4))}">生物技术与医药</a>&nbsp;&nbsp;
-                <a href="{:U('Team/teamlist',array('type' => 5))}">新材料</a>&nbsp;&nbsp;
-                <a href="{:U('Team/teamlist',array('type' => 6))}">现代农业</a>&nbsp;&nbsp;
-                <a href="{:U('Team/teamlist',array('type' => 1))}">其他</a>
+                <a href="{:U('Team/teamlist')}">全部</a>&nbsp;
+                <a href="{:U('Team/teamlist',array('type' => 1))}">电子信息</a>
+                <a href="{:U('Team/teamlist',array('type' => 2))}">机械设计与制造</a>&nbsp;
+                <a href="{:U('Team/teamlist',array('type' => 3))}">新能源与环保</a>&nbsp;
+                <a href="{:U('Team/teamlist',array('type' => 4))}">生物技术与医药</a>&nbsp;
+                <a href="{:U('Team/teamlist',array('type' => 5))}">新材料</a>&nbsp;
+                <a href="{:U('Team/teamlist',array('type' => 6))}">现代农业</a>&nbsp;
+                <a href="{:U('Team/teamlist',array('type' => 7))}">其他</a>
             </div>
             <hr />
-            <div class="info-list <?php if($i % 2 == 0) echo ' grey';?>">
-               <div class="info-title">
-                    <span>
-                        <a href="#">
-                          团队名 &nbsp;&nbsp;
-                        </a>
-                    </span>
-                    <span>&nbsp;</span>
-                    <a href="{:U('Public/link')}">
-                        <img id="linkbutton" src="__PUBLIC__/images/linkbutton.jpg">
-                    </a>
-                </div>                           
-            </div>     
-            </div>
+            <volist name = "list" id="list">
+                <div class="info-list <?php if($i % 2 == 0) echo ' grey';?>">
+                    <img src="__PUBLIC__/images/demand_default.png" alt="">
+                    <div class="team-info">
+                        <h4>
+                           <span>团队名称：</span><a href="{:U('Team/team',array('id'=>$list['teamid']))}" class="control-title-width">{$list.teamname}</a>
+                        </h4>
+                        <p>
+                           工作单位：{$list.workpalce}
+                        </p>
+                        <p>
+                           <span>服务产业领域：</span><span title="{$list.team_research}" class="control-title-width">{$list.team_research}</span>
+                        </p>
+                        <p>
+                           <span>研究方向：</span><span title="{$list.research_content}" class="control-title-width">{$list.research_content}</span>
+                        </p>
+                    </div>  
+                    <div class="other-info">
+                        <p>
+                            组队时间：{$list.setup_time}
+                        </p>
+                        <!-- <p>关注度：1 </p> -->
+                        <p style="margin-top:10px;">
+                        <?php if (session('uid')): ?>
+                            <a href="{:U('Public/link',array('id'=>$list['teamid'] ,'linkType'=>2,'title'=>$list['teamname']))}" target="_black">
+                                <button>我要联系</button>
+                            </a>
+                        <?php else: ?>
+                            <a href="{:U('Public/login')}" target="_black">
+                                <button>我要联系</button>
+                            </a>
+                        <?php endif ?>
+                        </p>
+                   </div>            
+                </div>
+            </volist>
+            
             <div id="paging"></div>
         </div>
     </div>
     <include file="Public/footer" />
-
+    <script>
+        function waring () {
+            alert("只有专家用户有权限组建团队");
+        }
+    </script>
 </body>
 </html>
