--- a/Public/css/nav.css
+++ b/Public/css/nav.css
@@ -65,14 +65,21 @@ a{
 .nav-list p:hover{
 	background: #146FBD;
 }
+.nav-list p:hover a{
+	color: #fff;
+}
 .nav-list a{
 	color: grey;
 	font-size: 16px;
 	line-height: 30px;
 }
+
+
 #footerbox{ 
 	width: 100%;
 	background-image:url(../images/footerbackground.png);
+/*	position: fixed;
+	bottom: 40px;*/
 }
 #footer{
 	width:1000px;
@@ -103,6 +110,9 @@ a{
 }
 #bottombox{
 	width: 100%;
+	height: 30px;
+/*	position: fixed;
+	bottom: 0;*/
 }
 #bottom{
 	width: 1100px;
@@ -111,4 +121,7 @@ a{
 }
 #bottom p{
 	font-size: 12px;
+}
+div#footerlist p:hover{
+	background-color: #999;
 }
